# aldentefier-api

./: .gitignore  README.md  ald-api.yaml  index.html  push-gh-pages.sh  push-streamlit-heroku.sh  pyproject.toml
backend/: .dockerignore  Dockerfile  ald-api-backend.yaml  cloudbuild.yaml  main.py
frontend-bootstrap/: index.html
frontend-bootstrap/css/: mycss.css
frontend-bootstrap/js/: myjs.js
frontend-streamlit/: Dockerfile  Procfile  ald-api-streamlit.yaml  cloudbuild.yaml  main.py  requirements.txt  setup.sh
js/: _myjs.js
