[tool.poetry]
name = "aldentefier-api"
version = "0.1.0"
description = "Web API for the Aldentefier model."
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
